[gd_scene load_steps=11 format=3 uid="uid://di3v4xl5dcfxk"]

[ext_resource type="Theme" uid="uid://dsohn0rinyt37" path="res://new_theme.tres" id="1_5vw27"]
[ext_resource type="Texture2D" uid="uid://de8d5mp336jfw" path="res://ui_m.svg" id="1_7mycd"]
[ext_resource type="Script" uid="uid://do18bl8vk2uq6" path="res://handles.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://rhckamlictx4" path="res://ui_max.svg" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://cr043ip33ori8" path="res://draw.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://dgdyumg18xdoe" path="res://brush_ui.tscn" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://nl4y0tomjest" path="res://ui_x.svg" id="3_5vw27"]
[ext_resource type="FontFile" uid="uid://vvfehg8xskak" path="res://PublicPixel.ttf" id="4_272bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.04, 0.04, 0.04, 1)
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bvp3"]

[node name="Main" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_5vw27")

[node name="Handles" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ig7tw")

[node name="Right" type="Control" parent="Handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="Bottom" type="Control" parent="Handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="Corner" type="Control" parent="Handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="Content" type="Control" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 616.0
size_flags_vertical = 3
mouse_filter = 2

[node name="Draw" parent="Content" instance=ExtResource("2_h2yge")]

[node name="Control" parent="Content" instance=ExtResource("3_1bvp3")]
layout_mode = 1
offset_top = 39.0
offset_bottom = 39.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Toolbar" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Toolbar"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Toolbar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 2

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/Toolbar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "File
"
item_count = 2
popup/item_0/text = "New Board"
popup/item_0/id = 0
popup/item_1/text = "Open Board"
popup/item_1/id = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Toolbar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_1bvp3")

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Toolbar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture_normal = ExtResource("1_7mycd")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/Toolbar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture_normal = ExtResource("2_272bh")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/Toolbar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture_normal = ExtResource("3_5vw27")
ignore_texture_size = true
stretch_mode = 5

[node name="WindowTitle" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_272bh")
text = "Sketchboard"
horizontal_alignment = 1

[connection signal="gui_input" from="Handles/Right" to="Handles" method="_on_right_gui_input"]
[connection signal="gui_input" from="Handles/Bottom" to="Handles" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="Handles/Corner" to="Handles" method="_on_corner_gui_input"]
